Fixed overlap of resize handles
#82, #84

--- a/styles/docks.less
+++ b/styles/docks.less
@@ -17,29 +17,30 @@ atom-dock .tab-bar.inset-panel .tab {
   }
 }
 
-.atom-dock-resize-handle.bottom {
+.atom-dock-resize-handle {
   position: absolute;
-  z-index: 99999;
-  height: @width-resize-handle;
-  width: 100%;
-  box-shadow: inset 0 1px 0 @dock-border-color;
-}
+  z-index: 100;
 
-.atom-dock-resize-handle.left,
-.atom-dock-resize-handle.right {
-  position: absolute;
-  z-index: 99999;
-  width: @width-resize-handle;
-  height: 100%;
-}
+  &.bottom {
+    height: @width-resize-handle;
+    width: 100%;
+    box-shadow: inset 0 1px 0 @dock-border-color;
+  }
 
-.atom-dock-resize-handle.left {
-  box-shadow: inset -1px 0 0 0 @dock-border-color;
-}
+  &.left,
+  &.right {
+    width: @width-resize-handle;
+    height: 100%;
+  }
 
-.atom-dock-resize-handle.right {
-  box-shadow: inset 1px 0 0 0 @dock-border-color;
-}
+  &.left {
+    box-shadow: inset -1px 0 0 0 @dock-border-color;
+  }
+
+  &.right {
+    box-shadow: inset 1px 0 0 0 @dock-border-color;
+  }
+} // .atom-dock-resize-handle
 
 .atom-dock-toggle-button .atom-dock-toggle-button-inner {
   border-radius: @border-radius--base;
@@ -67,4 +68,4 @@ atom-dock .tab-bar.inset-panel .tab {
       transform: translateY(-12px);
     }
   }
-}
+} // .atom-dock-toggle-button .atom-dock-toggle-button-inner
